Fix z-indexes

--- a/css/modal.wpbp.less
+++ b/css/modal.wpbp.less
@@ -2,6 +2,7 @@
 	width: 100%;
 	height: 100%;
 	position: fixed;
+	z-index: 999999;
 	top: 0;
 	bottom: 0;
 	left: 0;
@@ -12,6 +13,7 @@
 .wpbp-modal-box {
 	display: none;
 	position: absolute;
+	z-index: 9999999;
 }
 
 .wpbp-modal-box-opened {
